[package]
name = "klur"
description = "Python extnsion module for LU decomposition using KLU"
repository = "https://github.com/rwl/klur"
version = "0.1.0"
edition = "2021"

[lib]
name = "klur"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17", features = ["extension-module"] }
numpy = "0.17"
itertools = "0.13"
suitesparse_sys = { version = "0.1.3", features = ["build_vendor", "static_libraries"] }
